ags (0.6.43)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed seeking playable after read in order to work with libsndfile
	* fixed usage of gdk_threads_enter() and gdk_threads_leave() because some were missing

ags (0.6.42)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved performance by optimizing computing time

ags (0.6.41)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed proper restore of GtkVScale digits
	* fixed proper restore of edit button of AgsDrum

ags (0.6.40)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed memory leak in ags_generic_preferences.c but wasn't that bad
	* fixed using prefered gtk_main_iteration_do() what gives you better program stability

ags (0.6.39)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed stack-corruption caused by integer overflow while doing variable typo

ags (0.6.38)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* work-around dead-lock as doing ipatch_file_identify_open() from different threads

ags (0.6.37)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing GMainContext acquire in ags_gui_thread.c
	* fixed NULL pointer accessing by moving code
	* fixed buffer-overflow because of swapped indices in ags_recycling.c

ags (0.6.36)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed introduced bug in ags_ffplayer.c because of missing mapping recalls

ags (0.6.35)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed SIGINT while accessing recycling_container being NULL in ags_channel_init_recall()

ags (0.6.34)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed wrong acquisition of AgsAudioSignal in ags_recall_recycling.c

ags (0.6.33)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed restore of AgsFFPlayer
	* implemented AgsStartReadFile task